--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -1,22 +1,20 @@
-.App-Register-Row{
+.App-Register-Row {
     display: flex;
     justify-content: center;
     padding: 10px;
     margin: 10px;
-    background-color: #fff;
     border-radius: 10px;
 }
 
-
-.App-Register-Row input{
-    padding: 10px;
-    margin: 10px;
-}
-
-
-.App-Register-Row button{
+.App-Register-Row input {
     padding: 5px;
     margin: 5px;
     width: 100%;
-    
+    box-sizing: border-box;
+}
+
+.App-Register-Row button {
+    padding: 5px;
+    margin: 5px;
+    width: 100%;
 }
